# vigra_cmake

./: CMakeLists.txt  CMakePackageConfigListHelpers.cmake  Doxyfile  FindOpenEXR.cmake  FindOpenMP.cmake  FindZLIB.cmake  INSTALL  JPEG_system.cmake  ModularDeps.cmake  README.md  TIFF_repo.cmake  TODO_build-system  VAD_Boost.cmake  VAD_Ceres.cmake  VAD_Eigen.cmake  VAD_Eigen3.cmake  VAD_HDF5.cmake  VAD_HendriksWrappers.cmake  VAD_JPEG.cmake  VAD_LibLZMA.cmake  VAD_MetaMat.cmake  VAD_OpenCV.cmake  VAD_OpenMP.cmake  VAD_PNG.cmake  VAD_TIFF.cmake  VAD_XGBoost.cmake  VAD_ZLIB.cmake  VAD_boost_config.cmake  VAD_boost_core.cmake  VAD_boost_filesystem.cmake  VAD_boost_functional.cmake  VAD_boost_io.cmake  VAD_boost_iterator.cmake  VAD_boost_mpl.cmake  VAD_boost_preprocessor.cmake  VAD_boost_smart_ptr.cmake  VAD_boost_static_assert.cmake  VAD_boost_system.cmake  VAD_boost_throw_exception.cmake  VAD_boost_type_traits.cmake  (+36 more)
cmake/: projectConfig.cmake.in
cmake/alglib/: FindAlglib.cmake
cmake/vigra_cmake/: FindOpenEXR.cmake
doc/: api.md  calib_howto.md  dims.md  install.md  overview.md  procedure.md  solve.md
include/vigra2/: codec.hxx  compression.hxx  imageinfo.hxx  impex.hxx  impexbase.hxx  multi_impex.hxx  sifImport.hxx
src/: auto_file.hxx  bmp.cxx  bmp.hxx  byteorder.hxx  codecmanager.cxx  codecmanager.hxx  compression.cxx  error.hxx  exr.cxx  exr.hxx  gif.cxx  gif.hxx  hdr.cxx  hdr.hxx  imageinfo.cxx  jpeg.hxx  png.cxx  png.hxx  pnm.cxx  pnm.hxx  sifImport.cxx  sun.cxx  sun.hxx  tiff.hxx  viff.cxx  viff.hxx  void_vector.hxx
test/: test.cxx
